Добавления описания в config.ini

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,6 @@
 [app]
-version = 2.3
+version = 2.4
+; xmpp или mail, для выбора типа транспорта
 transport = xmpp
 
 [db]
@@ -10,23 +11,39 @@ username = user
 password = password
 
 [xmpp]
+; имя jabber-сервер 
 host     = host
+; порт jabber-сервер
 port     = 5222
+; имя пользователя для подключения к серверу
 username = username
+; пароль для подключения к серверу
 password = password
+; название ресурса
 resource = robot
+; имя получателя
 sender   = username@host
 
 [mail]
+; имя протокола
 driver      = smtp
+; имя сервера
 host        = smtp.yandex.com
+; порт сервера
 port        = 465
+; использование шифрования
 encryption  = ssl
-username    = username@yandex.com 
+; имя пользователя для подключения к серверу
+username    = username@yandex.com
+; пароль для подключения к серверу
 password    = password
+; адрес отправителя
 from[email] = username@yandex.com
+; имя отправителя
 from[name]  = EAVIIAS Robot
+; имя получателя
 to[email]   = to@yandex.com
+; имя получателя скрытой копии
 ;bcc[email]   = hide@gmail.com
 
 [task]
