Добавлена задача "МСЭ проводится 29 дней и более"

--- a/tasks/ipra/task.ini
+++ b/tasks/ipra/task.ini
@@ -1,3 +1,3 @@
 [ipra]
-description = 'Нет даты выдачи ИПРА, МСЭ в стадии <документы выданы>'
+description = 'Нет даты выдачи ИПРА, МСЭ в стадии "документы выданы"'
 header = 'Бюро/ЭС; Номер акта; СНИЛС; Дата вынесения решения'
