Обновление примера конфигурационного файла

--- a/config.ini.sample
+++ b/config.ini.sample
@@ -53,3 +53,5 @@ epgu = 0 8-15 * * 1-5
 fri =  0 8-15/5 * * 1-5
 remd = 0 8-15 * * 1-5
 request = 0 8-15 * * 1-5
+examksi = 0 8-15/5 * * 1-5
+directionksi = 0 8-15 * * 1-5
