--- a/config.ini.sample
+++ b/config.ini.sample
@@ -53,5 +53,6 @@ epgu = 0 8-15 * * 1-5
 fri =  0 8-15/5 * * 1-5
 remd = 0 8-15 * * 1-5
 request = 0 8-15 * * 1-5
+ipra = 0 8-15 * * 1-5
 examksi = 0 8-15/5 * * 1-5
 directionksi = 0 8-15 * * 1-5
