--- a/config.ini.sample
+++ b/config.ini.sample
@@ -56,3 +56,4 @@ request = 0 8-15 * * 1-5
 ipra = 0 8-15 * * 1-5
 examksi = 0 8-15/5 * * 1-5
 directionksi = 0 8-15 * * 1-5
+signmissing = 0 8-15 * * 1-5
