--- a/tasks/signmissing/task.ini
+++ b/tasks/signmissing/task.ini
@@ -1,3 +1,3 @@
-[remd]
+[signmissing]
 description = 'Отсутствует электронная подпись в документах-результатах'
-header = 'Подразделение; СНИЛС; Дата вынесения решения; Количество док-тов без ЭП'
+header = 'Подразделение; СНИЛС; Дата вынесения решения'
