--- a/config.ini.sample
+++ b/config.ini.sample
@@ -58,3 +58,4 @@ examksi = 0 8-15/5 * * 1-5
 directionksi = 0 8-15 * * 1-5
 signmissing = 0 8-15 * * 1-5
 copycertmissing = 0 8-15 * * 1-5
+nolinked = 0 8-15 * * 1-5
