add column protocol num copycertmissing

--- a/tasks/copycertmissing/task.ini
+++ b/tasks/copycertmissing/task.ini
@@ -1,3 +1,3 @@
 [copycertmissing]
 description = 'Отсутствует скан-копия БСО'
-header = 'Подразделение; СНИЛС; Дата вынесения решения'
+header = 'Подразделение; СНИЛС; Номер протокола; Дата вынесения решения'
