add column protocol num signmissing

--- a/tasks/signmissing/task.ini
+++ b/tasks/signmissing/task.ini
@@ -1,3 +1,3 @@
 [signmissing]
 description = 'Отсутствует электронная подпись в документах-результатах'
-header = 'Подразделение; СНИЛС; Дата вынесения решения'
+header = 'Подразделение; СНИЛС; Номер протокола; Дата вынесения решения'
