--- a/tasks/copycertmissing/task.ini
+++ b/tasks/copycertmissing/task.ini
@@ -1,3 +1,4 @@
 [copycertmissing]
+type = sql
 description = 'Отсутствует скан-копия БСО'
 header = 'Подразделение; СНИЛС; Номер протокола; Дата вынесения решения'
