--- a/tasks/cryptovalid/task.ini
+++ b/tasks/cryptovalid/task.ini
@@ -1,3 +1,4 @@
 [remd]
+type = sql
 description = 'Недействительные подписи в электронных направлениях'
 header = 'Стадия; Дата поступления; СНИЛС; МО'
