--- a/tasks/directionksi/task.ini
+++ b/tasks/directionksi/task.ini
@@ -1,3 +1,4 @@
 [directionksi]
+type = sql
 description = 'Контрольные сроки исполнения направлений на МСЭ'
 header = 'Описание ошибки или предупреждения; Подразделение; СНИЛС; Дата поступления направления'
