--- a/tasks/examksi/task.ini
+++ b/tasks/examksi/task.ini
@@ -1,3 +1,4 @@
 [examksi]
+type = sql
 description = 'Освидетельствование по МСЭ проводится 29 дней и более'
 header = 'Подразделение; СНИЛС; Номер протокола; Дата начала экспертизы; Количество в рабочих днях'
