--- a/tasks/fri/task.ini
+++ b/tasks/fri/task.ini
@@ -1,3 +1,4 @@
 [fri]
+type = sql
 description = 'Данные не переданные во ФРИ'
 header = 'Подразделение; СНИЛС; Номер протокола; Дата вынесения решения; Количество в днях'
