--- a/tasks/ipra/task.ini
+++ b/tasks/ipra/task.ini
@@ -1,3 +1,4 @@
 [ipra]
+type = sql
 description = 'Нет даты выдачи ИПРА, МСЭ в стадии "документы выданы"'
 header = 'Бюро/ЭС; Номер акта; СНИЛС; Дата вынесения решения'
