--- a/tasks/nolinked/task.ini
+++ b/tasks/nolinked/task.ini
@@ -1,3 +1,4 @@
 [nolinked]
+type = sql
 description = 'Закрытые направления без связанных документов'
 header = 'Стадия; Дата поступления; СНИЛС; МО'
