--- a/tasks/request/task.ini
+++ b/tasks/request/task.ini
@@ -1,3 +1,4 @@
 [request]
+type = sql
 description = 'Незакрытые направления/заявления'
 header = 'Подразделение; Дата регистрации; СНИЛС; Тип документа'
