--- a/tasks/signmissing/task.ini
+++ b/tasks/signmissing/task.ini
@@ -1,3 +1,4 @@
 [signmissing]
+type = sql
 description = 'Отсутствует электронная подпись в документах-результатах'
 header = 'Подразделение; СНИЛС; Номер протокола; Дата вынесения решения'
