--- a/config.ini.sample
+++ b/config.ini.sample
@@ -63,3 +63,4 @@ signmissing = 0 8-15 * * 1-5
 copycertmissing = 0 8-15 * * 1-5
 nolinked = 0 8-15 * * 1-5
 remderror = 0 8-15 * * 1-5
+noscandoc = 0 8-15 * * 1-5
