fix noscandoc sql

--- a/tasks/noscandoc/task.ini
+++ b/tasks/noscandoc/task.ini
@@ -1,4 +1,4 @@
 [noscandoc]
 type = sql
 description = 'Отсутствует скан-копия в документах-основаниях'
-header = 'Подразделение; СНИЛС; Номер протокола; Дата последнего изменения'
+header = 'Подразделение; СНИЛС; Номер протокола; Дата проведения МСЭ'
