add task nopresence

--- a/config.ini.sample
+++ b/config.ini.sample
@@ -64,3 +64,4 @@ copycertmissing = 0 8-15 * * 1-5
 nolinked = 0 8-15 * * 1-5
 remderror = 0 8-15 * * 1-5
 noscandoc = 0 8-15 * * 1-5
+nopresence = 0 8-15 * * 1-5
