--- a/tasks/15min/task.ini
+++ b/tasks/15min/task.ini
@@ -1,4 +1,4 @@
 [15min]
 type = sql
 description = 'Время ожидания гражданина в очереди больше 15 минут'
-header = 'Подразделение; СНИЛС; Номер протокола; Ожидание в минутах'
+header = 'Подразделение; СНИЛС; Номер протокола; В очереди в минутах'
