--- a/config.ini.sample
+++ b/config.ini.sample
@@ -66,3 +66,4 @@ remderror = 0 8-15 * * 1-5
 noscandoc = 0 8-15 * * 1-5
 nopresence = 0 8-15 * * 1-5
 15min = 0 8-15 * * 1-5
+personnotice = 0 8-15 * * 1-5
