--- a/config.ini.sample
+++ b/config.ini.sample
@@ -67,3 +67,4 @@ noscandoc = 0 8-15 * * 1-5
 nopresence = 0 8-15 * * 1-5
 15min = 0 8-15 * * 1-5
 personnotice = 0 8-15 * * 1-5
+signprotocolmissing = 0 8-15 * * 1-5
