--- a/config.ini.sample
+++ b/config.ini.sample
@@ -68,3 +68,4 @@ nopresence = 0 8-15 * * 1-5
 15min = 0 8-15 * * 1-5
 personnotice = 0 8-15 * * 1-5
 signprotocolmissing = 0 8-15 * * 1-5
+examtoremd = 0 8-15 * * 1-5
