fix task examtoremd

--- a/tasks/examtoremd/task.ini
+++ b/tasks/examtoremd/task.ini
@@ -1,4 +1,4 @@
 [examtoremd]
 type = sql
 description = 'Сведения о результатах МСЭ не переданные в РЭМД'
-header = 'Подразделение; СНИЛС; Номер протокола'
+header = 'Подразделение; СНИЛС; Номер протокола; Дата вынесения решения'
