--- a/tasks/remd/task.ini
+++ b/tasks/remd/task.ini
@@ -1,4 +1,4 @@
 [remd]
 type = sql
 description = 'Необработанные электронные направления'
-header = 'Стадия; Дата поступления; СНИЛС; МО'
+header = 'N; Стадия; Дата поступления; СНИЛС; МО'
